<?xml version="1.0"?>
<package format="2">
  
  <name>scitos_2d_mbf</name>
  
  <version>0.0.1</version>
  
  <description>Move Base Flex configuration files for 2D navigation stack on a Metralab SCITOS G5/A5 robot base. Content based on the UOS ceres_navigation package</description>

  <maintainer email="nickh@robots.ox.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <author email="nickh@robots.ox.ac.uk">Nick Hawes</author>

  <exec_depend>mbf_costmap_nav</exec_depend>  
  <exec_depend>scitos_2d_navigation</exec_depend>  
  <buildtool_depend>catkin</buildtool_depend>


</package>
